--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,19 +1,19 @@
-.socials-container-holder {
+.projects-container-holder {
     display: flex;
     justify-content: center;
 }
-.socials-container {
+.projects-container {
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 
-.socials-title {
+.projects-title {
     margin: 8px 0 0 0 ;
     color: white;
 }
 
-.socials-button-container {
+.projects-button-container {
     display: flex;
     flex-direction: column;
     align-items: center;
