--- a/src/components/common/navigation-bar/navigation-bar.css
+++ b/src/components/common/navigation-bar/navigation-bar.css
@@ -1,5 +1,5 @@
 .navigation-bar-container-holder {
-    display: none;
+    display: none; /* Change this to flex in production */
     justify-content: center;
     align-items: center;
     margin: 8px 0;
