add padding on bottom of page

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,6 +1,7 @@
 .projects-container-holder {
     display: flex;
     justify-content: center;
+    padding-bottom: 24px;
 }
 .projects-container {
     display: flex;
