remove gradient background, text color to match solid background

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   min-height: 100vh;
   text-align: center;
-  background: linear-gradient(to right,slateblue,skyblue);
+  background: #FAF5EF;
   font-family: 'Trebuchet MS';
 }
